# comp_prog_results_converter

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/standings/: contest.rs  kattis.rs  mod.rs  tests.rs  testsys.rs
tests/resources/: ncpc22.standings  nwerc21.standings
