[package]
name = "competitive_programming_results_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
html5ever = "0.26.0"
selectors = "0.22.0"
clap = { version = "4.0.26", features = ["derive"] }